smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/doc-targets/docs-on-metadata.smithy
// Parse error at line 2, column 1 near `/// Invalid docs!`: Documentation cannot be applied to `metadata`
/// Invalid docs!
metadata foo = "baz"
